--- a/install/upgrade/changes.txt
+++ b/install/upgrade/changes.txt
@@ -93,3 +93,7 @@ ALTER TABLE `bb_sessions` CHANGE `session_ip` `session_ip` varchar(42) NOT NULL 
 UPDATE `bb_banlist` SET `ban_ip` = '0';
 ALTER TABLE `bb_banlist` CHANGE `ban_ip` `ban_ip` varchar(42) NOT NULL DEFAULT '0';
 INSERT INTO `bb_cron` VALUES ('999', '1', 'PM cleanup', 'clean_pm.php', 'daily', '', '05:00:00', '70', '', '', '', '1', '', '0', '1', '0');
+
+// 2.1.5 (LTS 2023.07)
+DELETE FROM `bb_smilies` WHERE `code` = ':ad:';
+INSERT INTO `bb_smilies` (`code`, `smile_url`, `emoticon`) VALUES (':cd:', 'cd.gif', 'cd');
