--- a/install/upgrade/changes.txt
+++ b/install/upgrade/changes.txt
@@ -99,3 +99,6 @@ DELETE FROM `bb_smilies` WHERE `code` = ':ad:';
 INSERT INTO `bb_smilies` (`code`, `smile_url`, `emoticon`) VALUES (':cd:', 'cd.gif', 'cd');
 ALTER TABLE `bb_posts_text` CHANGE `post_text` `post_text` MEDIUMTEXT NOT NULL;
 ALTER TABLE `bb_privmsgs_text` CHANGE `privmsgs_text` `privmsgs_text` MEDIUMTEXT NOT NULL;
+
+// 2.1.5 (LTS 2023.08)
+ALTER TABLE `bb_bt_torrents` ADD COLUMN `info_hash_v2` VARBINARY(32) NOT NULL DEFAULT '';
